      * Inverted how hide, evasion, and stealth value percent bonuses work. Now lower is better
      * Hide locked slots without outfits as the player can't do anything with them
      * Added volley mode to weapon sets that makes weapons fire as fast as possible, instead of staggered
      * Autonav options are now player-specific and accessible via the info menu settings button
   * New Content
      * New mechanic for House Sirius called flow to unlock psychic powers
         * Gives passive bonuses to Sirius ships
         * Outfits allow use on non-Sirius ships
      * 6 new missions
         * Finish the Minerva campaign
         * Nebula refugees
      * Many new events
         * Abandoned stations with secrets
         * Greedy pirates looking for domination
         * Challenges of the mind
         * Mysterious signals
         * More points of interest
      * Many, many new systems and space objects
         * 67 new star systems with 123 new space objects
         * New graphics for space objects
      * Tons of new outfits
         * Sirius flow outfits
         * Point defense systems
         * New accessories
         * and more!
      * New NPC graphics
      * More NPC and news messages
      * Added the Space Trader Society faction
      * Custom death animations for many ships
      * More ways to increase fleet capacity
      * The pirate clans are now more differentiated in terms of AI behaviour and taunts
   * Engine
      * Map system viewer is more compact
      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
      * Library to handle conditionals for mission computer missions
      * Added support for disabling specific patrol lanes from being generated
      * Support for Lua scripting for ships
      * Changed api of evt.claim and misn.claim
      * Missions/events load Lua as chunks instead of compiling each time
      * Significant speed-ups in collision detection with quadtrees