@@ -33,6 +33,7 @@
       * Hide locked slots without outfits as the player can't do anything with them
       * Added volley mode to weapon sets that makes weapons fire as fast as possible, instead of staggered
       * Autonav options are now player-specific and accessible via the info menu settings button
+      * Travelling merchant gives full details of the intrinsic outfits they provide
    * New Content
       * New mechanic for House Sirius called flow to unlock psychic powers
          * Gives passive bonuses to Sirius ships
